--- a/TcpUdpTool/TcpUdpTool.csproj
+++ b/TcpUdpTool/TcpUdpTool.csproj
@@ -80,13 +80,14 @@
     <Compile Include="Model\Parser\IParser.cs" />
     <Compile Include="Model\TransmissionHistory.cs" />
     <Compile Include="Model\Data\Piece.cs" />
-    <Compile Include="ViewModel\Command\DelegateCommand.cs" />
-    <Compile Include="ViewModel\ObservableObject.cs" />
+    <Compile Include="ViewModel\Reuseable\DelegateCommand.cs" />
+    <Compile Include="ViewModel\Reuseable\ObservableObject.cs" />
     <Compile Include="Model\TcpClient.cs" />
-    <Compile Include="ViewModel\Presenter\SettingsPresenter.cs" />
-    <Compile Include="ViewModel\Presenter\TcpClientPresenter.cs" />
-    <Compile Include="ViewModel\Presenter\TcpServerPresenter.cs" />
-    <Compile Include="ViewModel\Presenter\UdpPresenter.cs" />
+    <Compile Include="ViewModel\HistoryViewModel.cs" />
+    <Compile Include="ViewModel\SettingsViewModel.cs" />
+    <Compile Include="ViewModel\TcpClientViewModel.cs" />
+    <Compile Include="ViewModel\TcpServerViewModel.cs" />
+    <Compile Include="ViewModel\UdpViewModel.cs" />
     <Compile Include="View\HelpView.xaml.cs">
       <DependentUpon>HelpView.xaml</DependentUpon>
     </Compile>
