using async await, ipv6 and multicastclient
- work on moving to using async and await instead of old Begin functions
for async communication.
- added ipv6 support to tcpclient and tcpserver (udpclientserver still
needs work)
- start on UdpMulticast, logic is working.

--- a/TcpUdpTool/TcpUdpTool.csproj
+++ b/TcpUdpTool/TcpUdpTool.csproj
@@ -70,6 +70,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\Data\PieceSendResult.cs" />
     <Compile Include="Model\Formatter\HexFormatter.cs" />
     <Compile Include="Model\Formatter\IFormatter.cs" />
     <Compile Include="Model\Formatter\PlainTextFormatter.cs" />
@@ -80,8 +81,9 @@
     <Compile Include="Model\Parser\IParser.cs" />
     <Compile Include="Model\TransmissionHistory.cs" />
     <Compile Include="Model\Data\Piece.cs" />
-    <Compile Include="Model\UdpMulticast.cs" />
-    <Compile Include="Model\Util\InterfaceUtils.cs" />
+    <Compile Include="Model\UdpMulticastClient.cs" />
+    <Compile Include="Model\Util\NetworkUtils.cs" />
+    <Compile Include="Model\EventArg\ReceivedEventArgs.cs" />
     <Compile Include="ViewModel\Reuseable\DelegateCommand.cs" />
     <Compile Include="ViewModel\Reuseable\ObservableObject.cs" />
     <Compile Include="Model\TcpClient.cs" />
@@ -191,6 +193,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\Exception\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
