start work on settings

--- a/TcpUdpTool/App.config
+++ b/TcpUdpTool/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TcpUdpTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <TcpUdpTool.Properties.Settings>
+            <setting name="Encoding" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="IPv6Support" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </TcpUdpTool.Properties.Settings>
+    </userSettings>
 </configuration>
