settings added for ipv6, hitory length and encoding

--- a/TcpUdpTool/App.config
+++ b/TcpUdpTool/App.config
@@ -16,6 +16,9 @@
             <setting name="IPv6Support" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="HistoryEntries" serializeAs="String">
+                <value>100</value>
+            </setting>
         </TcpUdpTool.Properties.Settings>
     </userSettings>
 </configuration>
