--- a/TcpUdpTool/Properties/Settings.settings
+++ b/TcpUdpTool/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="IPv6Support" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="HistoryEntries" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
