--- a/TcpUdpTool/TcpUdpTool.csproj
+++ b/TcpUdpTool/TcpUdpTool.csproj
@@ -199,6 +199,9 @@
   <ItemGroup>
     <Folder Include="Model\Exception\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\help.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
