added settings for showing timestamp and ip address in history

--- a/TcpUdpTool/App.config
+++ b/TcpUdpTool/App.config
@@ -19,6 +19,12 @@
             <setting name="HistoryEntries" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="HistoryInfoTimestamp" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="HistoryInfoIpAdress" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TcpUdpTool.Properties.Settings>
     </userSettings>
 </configuration>
