--- a/TcpUdpTool/Properties/Settings.settings
+++ b/TcpUdpTool/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="HistoryEntries" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="HistoryInfoTimestamp" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="HistoryInfoIpAdress" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
