added setting for auto scroll to end

--- a/TcpUdpTool/App.config
+++ b/TcpUdpTool/App.config
@@ -25,6 +25,9 @@
             <setting name="HistoryInfoIpAdress" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ScrollToEnd" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TcpUdpTool.Properties.Settings>
     </userSettings>
 </configuration>
