--- a/TcpUdpTool/Properties/Settings.settings
+++ b/TcpUdpTool/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="HistoryInfoIpAdress" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ScrollToEnd" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
