switch to flowdocument for help instead of html

--- a/TcpUdpTool/TcpUdpTool.csproj
+++ b/TcpUdpTool/TcpUdpTool.csproj
@@ -191,6 +191,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -217,7 +218,6 @@
     <Folder Include="Model\Exception\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\help.html" />
     <Resource Include="Resources\icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
